# Huffman_Alv-Ed

./: CMakeLists.txt  abc.c  bitVector.c  bitVector.h  desmaptree.c  desmaptree.h  frequencyCounter.c  frequencyCounter.h  hash_table.c  hash_table.h  header  header.h  helpful.c  helpful.h  helpful_function.c  helpful_function.h  main  main.c  maptree.c  maptree.h  priorityQueue.c  priorityQueue.h  saida.huff  size_hash_size_trash.h  size_hash_size_tree.c  stringList.c  stringList.h  stringList.h.gch  teste.c  teste.txt
string/: stringList.c  stringList.h
